# expenses-api

./: .env.example  .gitignore  docker-compose.yaml  pyproject.toml
src/api/: __main__.py  app.py  database.py  settings.py  tables.py
src/api/api/: __init__.py  categories.py  expenses.py
src/api/models/: categories.py  expenses.py
src/api/services/: categories.py  expenses.py  users.py
